--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,20 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+h1 {
+  font-size: 2.75rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+p {
+  font-size: 0.925rem;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 3.25rem;
+  }
+
+  p {
+    font-size: 1rem;
   }
 }
 
-body {
-
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 3.5rem;
+  }
 }
